Groups Quiz and Quest template content into pages - menu, config, practicing states content are all in their own page. (purpose: provide a consistent or modular structure for future styling or content)

--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -17,72 +17,81 @@
 		<!-- flexbox page content goes here -->
 		<div class="auto-layout_content-container">
 
-			<div class="quiz-menu-row quiz-header-row" ng-hide="practicing">
-				<h2 class="text-and-lpc__text">
-					What would you like to test?
-				</h2>
+			<div class="quiz-menu-page" ng-hide="practicing">
 
-				<p> Use the quizzes to track your progress over time. </p>
-				<p> You can compare your scores before and after a period of practice. </p>
-			</div>
+				<div class="quiz-menu-row quiz-header-row">
+					<h2 class="text-and-lpc__text">
+						What would you like to test?
+					</h2>
 
-			<div class="quiz-menu-row quiz-description-row" ng-hide="practicing">
-
-				<div class="quiz-description">
-					<h3>Syllable Quiz</h3>
-					<p>
-						Imitate the clinician's model of syllables containing /r/
-						 (ten syllables, three times each).
-					</p>
-
-					<div class="btn-row">
-						<button
-							class="big-button"
-							ng-click="beginSyllableProbe()"
-							ng-hide="practicing"
-						>
-							Syllable Quiz
-						</button>
-					</div>
+					<p> Use the quizzes to track your progress over time. <br/>
+					You can compare your scores before and after a period of practice. </p>
 				</div>
 
-				<div class="quiz-description">
-					<h3>Word Quiz</h3>
-					<p>
-						Read words containing /r/. The long quiz
-						 contains 50 words and the short quiz contains 25 words.
-					</p>
-					<div class="btn-row">
-						<button
-							class="big-button"
-							ng-click="beginWordProbe(50)"
-							ng-hide="practicing"
-						>
-							Long Word Quiz
-						</button>
+				<div class="quiz-menu-row quiz-description-row">
 
-						<button
-							class="big-button"
-							ng-click="beginWordProbe(25)"
-							ng-hide="practicing"
-						>
-							Short Word Quiz
-						</button>
+					<div class="quiz-description">
+						<h3>Syllable Quiz</h3>
+						<p>
+							Imitate the clinician's model of syllables containing /r/
+							 (ten syllables, three times each).
+						</p>
+
+						<div class="btn-row">
+							<button
+								class="big-button"
+								ng-click="beginSyllableProbe()"
+								ng-hide="practicing"
+							>
+								Syllable Quiz
+							</button>
+						</div>
+					</div>
+
+					<div class="quiz-description">
+						<h3>Word Quiz</h3>
+						<p>
+							Read words containing /r/. The long quiz
+							 contains 50 words and the short quiz contains 25 words.
+						</p>
+						<div class="btn-row">
+							<button
+								class="big-button"
+								ng-click="beginWordProbe(50)"
+								ng-hide="practicing"
+							>
+								Long Word Quiz
+							</button>
+
+							<button
+								class="big-button"
+								ng-click="beginWordProbe(25)"
+								ng-hide="practicing"
+							>
+								Short Word Quiz
+							</button>
+						</div>
 					</div>
 				</div>
-			</div>
+			</div> <!-- end quiz-menu-page -->
 
-			<practice-directive
-				begin-on-load="true"
-				ng-if="practicing"
-				probe="true"
-				csvs="csvs"
-				order="order"
-				count="count"
-				type="type"
-				suppress-start-button="true"
-				end-practice-callback="endProbeCallback()">
-			</practice-directive>
+
+			<!-- ============================== -->
+			<div class="quiz-practice-page">
+
+				<practice-directive
+					begin-on-load="true"
+					ng-if="practicing"
+					probe="true"
+					csvs="csvs"
+					order="order"
+					count="count"
+					type="type"
+					suppress-start-button="true"
+					end-practice-callback="endProbeCallback()">
+				</practice-directive>
+
+			</div> <!-- end quiz-practice-page -->
 
 		</div> <!-- .auto-layout -->
 	</div> <!-- .auto-contentBox -->
