--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -77,7 +77,7 @@
 
 
 			<!-- ============================== -->
-			<div class="quiz-practice-page">
+			<div class="quiz-practice-page" ng-hide="!practicing">
 
 				<practice-directive
 					begin-on-load="true"
