--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -144,7 +144,7 @@
 			</div> <!-- end quest-config-page -->
 
 			<!-- ============================== -->
-			<div class="quest-practice-page">
+			<div class="quest-practice-page" ng-hide="!practicing">
 
 				<practice-directive
 					ng-if="practicing && !configuring"
