--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -24,19 +24,6 @@
       {{currentWordIdx + 1}}/{{count}}
     </p>
   </div>
-  <div style="width: {{sandholes.length * 41}}px; text-align: left; margin: auto">
-    <div class="sand_coins">
-      <div ng-repeat="stack_coins in block_coins track by $index" class="coin_stack"
-	   style="display: inline-block; position: relative; height: 80px; width: 33px; margin: 0 4px -21px 4px;">
-	<img ng-repeat="stack_coin in stack_coins track by $index"
-	     src="img/stackCoins/stackCoin-{{stack_coin}}.png"
-	     style="position: absolute; bottom: {{$index * 6}}px"/>
-      </div>
-    </div>
-    <div class="sand_holes">
-      <img ng-repeat="i in sandholes track by $index" src="img/stackCoins/sandHole.png" />
-    </div>
-  </div>
 
   <lpc-directive
     transparent="true"
@@ -50,4 +37,18 @@
     wave-hidden="forceWaveHidden || isFeedbacking"
     hide-btn="true"
     />
+
+    <div class="coinBox-layout" style="width: {{sandholes.length * 41}}px; text-align: left; margin: auto">
+      <div class="sand_coins">
+        <div ng-repeat="stack_coins in block_coins track by $index" class="coin_stack"
+       style="display: inline-block; position: relative; height: 80px; width: 33px; margin: 0 4px -21px 4px;">
+    <img ng-repeat="stack_coin in stack_coins track by $index"
+         src="img/stackCoins/stackCoin-{{stack_coin}}.png"
+         style="position: absolute; bottom: {{$index * 6}}px"/>
+        </div>
+      </div>
+      <div class="sand_holes">
+        <img ng-repeat="i in sandholes track by $index" src="img/stackCoins/sandHole.png" />
+      </div>
+    </div>
 </div> <!-- end words-contentBox-->
