Adjusting broken styling of the target word/syllable

--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -12,18 +12,13 @@
     ng-if="false">
     Next {{type}}
   </button>
+
   <div class="promptBox-layout" ng-hide="!isPracticing">
-    <p
-      ng-hide="!isPracticing"
-      class="words-word">
-      {{carrier_phrase.replace("___", currentWord)}}
-    </p>
-    <p
-      ng-hide="!isPracticing"
-      class="words-progress-indicator">
-      {{currentWordIdx + 1}}/{{count}}
-    </p>
-  </div>
+		<div class="promptBox">
+			<p class="words-progress-indicator"> {{currentWordIdx + 1}} of {{count}} </p>
+			<p class="words-word"> {{carrier_phrase.replace("___", currentWord)}} </p>
+		</div>
+	</div>
 
   <lpc-directive
     transparent="true"
