--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -12,13 +12,21 @@
 
 
 <!-- .lpc-container is the light blue containing box-->
-<div ng-class="{'lpc-container': !tutorial, 'lpc-container-tutorial': tutorial, 'transparent-background': transparent}">
+<div ng-class="{
+  'beachpost-aligned': beachpost,
+  'lpc-container': !tutorial,
+  'lpc-container-tutorial': tutorial,
+  'transparent-background': transparent}"
+>
 
 	<!-- this holds the lpc renderer -->
 	<div
-		id="lpc-canvas-parentSize"
-		ng-class="{'slider-and-canvas': !tutorial, buttons_visible: rate}"
-		ng-class="{'full-width': !rate && !reset && !tutorial}"
+    id="lpc-canvas-parentSize"
+		ng-class="{
+      'slider-and-canvas': !tutorial,
+      'beachpost-aligned': beachpost,
+      buttons_visible: rate,
+      'full-width': !rate && !reset && !tutorial}"
 		>
 		<!-- Renderer will be inserted here -->
 		<canvas
