--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,69 +1,70 @@
-<div class="button-side-container rateBtn-container" ng-if="rate">
- 	<div ng-click="data.rating = 3" class="rateBtn rate-gold">
-		<span class="rateBtn-textbox">Great</span>
-	</div>
- 	<div ng-click="data.rating = 2" class="rateBtn rate-silver" >
-		<span class="rateBtn-textbox">Good</span>
-	</div>
- 	<div ng-click="data.rating = 1" class="rateBtn rate-bronze">
-		<span class="rateBtn-textbox">Try Again</span>
-	</div>
-</div>
+<div class="lpc-contentBox">
+  <div class="button-side-container rateBtn-container" ng-if="rate">
+    <div ng-click="data.rating = 3" class="rateBtn rate-gold">
+      <span class="rateBtn-textbox">Great</span>
+    </div>
+    <div ng-click="data.rating = 2" class="rateBtn rate-silver" >
+      <span class="rateBtn-textbox">Good</span>
+    </div>
+    <div ng-click="data.rating = 1" class="rateBtn rate-bronze">
+      <span class="rateBtn-textbox">Try Again</span>
+    </div>
+  </div>
 
+  <!-- .lpc-container is the light blue containing box-->
+  <div ng-class="{
+    'lpc-container': !tutorial,
+    'lpc-container-tutorial': tutorial,
+    'transparent-background': transparent}"
+  >
 
-<!-- .lpc-container is the light blue containing box-->
-<div ng-class="{
-  'lpc-container': !tutorial,
-  'lpc-container-tutorial': tutorial,
-  'transparent-background': transparent}"
->
+    <!-- this holds the lpc renderer -->
+    <div
+      id="lpc-canvas-parentSize"
+      ng-class="{
+        'slider-and-canvas': !tutorial,
+        'beachpost-aligned': beachpost,
+        buttons_visible: rate,
+        'full-width': !rate && !reset && !tutorial}"
+      >
+      <!-- Renderer will be inserted here -->
+      <canvas
+        id="lpc-canvas"
+        ng-hide="lpcHidden || probe || waveHidden || $root.rootWaveHidden" >
+      </canvas>
 
-	<!-- this holds the lpc renderer -->
-	<div
-    id="lpc-canvas-parentSize"
-		ng-class="{
-      'slider-and-canvas': !tutorial,
-      'beachpost-aligned': beachpost,
-      buttons_visible: rate,
-      'full-width': !rate && !reset && !tutorial}"
-		>
-		<!-- Renderer will be inserted here -->
-		<canvas
-			id="lpc-canvas"
-			ng-hide="lpcHidden || probe || waveHidden || $root.rootWaveHidden" >
-		</canvas>
+    </div>
+  </div>
 
-	</div>
-</div>
+  <div class="button-side-container ctlBtn-container">
+    <button
+      ng-click="stopPractice()"
+      class="reset-button big-button"
+      ng-if="rate">
+      Stop {{type}} {{probe ? "probe" : "practice"}}
+    </button>
 
-<div class="button-side-container ctlBtn-container">
-  <button
-    ng-click="stopPractice()"
-    class="reset-button big-button"
-    ng-if="rate">
-    Stop {{type}} {{probe ? "probe" : "practice"}}
-  </button>
+    <button
+      ng-click="resetF3()"
+      class="reset-button big-button"
+      ng-if="reset && !probe">
+      Reset Target
+    </button>
 
-  <button
-    ng-click="resetF3()"
-    class="reset-button big-button"
-    ng-if="reset && !probe">
-    Reset Target
-  </button>
+    <button
+      ng-click="showLPC()"
+      class="reset-button big-button"
+      ng-if="!probe && hideBtn"
+      ng-hide="!lpcHidden || rate || $root.rootWaveForced">
+      Show Wave
+    </button>
 
-  <button
-    ng-click="showLPC()"
-    class="reset-button big-button"
-    ng-if="!probe && hideBtn"
-    ng-hide="!lpcHidden || rate || $root.rootWaveForced">
-    Show Wave
-  </button>
-
-  <button
-    ng-click="hideLPC()"
-    class="reset-button big-button"
-    ng-if="!probe && hideBtn"
-    ng-hide="true || lpcHidden || rate">
-    Hide Wave
-  </button>
+    <button
+      ng-click="hideLPC()"
+      class="reset-button big-button"
+      ng-if="!probe && hideBtn"
+      ng-hide="true || lpcHidden || rate">
+      Hide Wave
+    </button>
+  </div>
 </div>
