--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -10,11 +10,15 @@
 
 		<!-- full-width & abs pos eles go here -->
 		<div class="resources-layout_bg-container">
-			<div ng-if="!data.configuring" class="img-bg img-bg_res"></div>
+			<div ng-if="!data.configuring" class="res-temp-img-pos">
+				<div class="img-bg img-bg_res"></div>
+			</div>
 
 			<div class="version-display">
-					<p>staRt app version {{data.version}}</p>
-					<p>{{data.platform}}</p>
+				<p><span class="res-important">staRt app version {{data.version}}</span>
+					<br/>
+					{{data.platform}}
+				</p>
 			</div>
 		</div> <!-- end _bg-container -->
 
@@ -23,47 +27,53 @@
 		<!-- page content goes here -->
 		<div class="resources-layout_content-container">
 
-			<div class="resources-links-container resources" ng-if="!data.configuring">
-				<button ng-click="configureLPC()" class="button button-calm adjust-profile">Adjust Profile LPC</button>
-				<h3>Downloads</h3>
-				<h4>Download resources directly to your device as PDFs</h4>
-				<div class="resources-links-row">
-					<a href="https://www.dropbox.com/sh/z4uvvnm6wajgve3/AADxCwlmmB6yKa3Ijs4lD26Va">
-						<button class="button button-calm"> Guide for Starting Pilot Study </button>
-					</a>
-					<a href="https://www.dropbox.com/sh/uanqcaau83s5uaa/AABnlD5sca9EmmnptSYyCHF9a">
-						<button class="button button-calm"> Checklist for Interested Clinicians </button>
-					</a>
-					<a href="https://www.dropbox.com/sh/x5m8iz4u6crve6r/AACxiy7yjmz9yH_n8vIscBqca">
-						<button class="button button-calm"> staRt User Manual </button>
-					</a>
-					<a href="https://www.dropbox.com/sh/dw2l2l4555ucwrj/AAD6JzC3WMfZ4SdexFLWRI4ka">
-						<button class="button button-calm"> Principal Letter </button>
-					</a>
-				</div>
-				<div class="resources-links-row">
-					<a href="https://www.dropbox.com/sh/41fay3xx5aniw1e/AACV8basbDgEX13Da68y9EJOa">
-						<button class="button button-calm"> Parent Letter </button>
-					</a>
-					<a href="https://www.dropbox.com/sh/pq5p6j0fz03sgjw/AAC-Wy7W9t61ugTfO-tZNEg0a">
-						<button class="button button-calm questionnaire"> SLP Informational Letter </button>
-					</a>
-					<a href="https://www.dropbox.com/sh/p79m84qq9kprare/AACmj0X28Xmr6HFPk8I_erOAa">
-						<button class="button button-calm questionnaire"> Clinician Questionnaires </button>
-					</a>
-				</div>
-				<h3>Links</h3>
-				<h4>Open Google Forms in your device's browser</h4>
-				<div class="resources-links-row">
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLSewiD8Uxle5WRPh5ArgUwYNQA6lktpjA8-xwSQVqinTW1IQiA/viewform?c=0&w=1">
-						<button class="button button-calm"> Pilot Tester Survey </button>
-					</a>
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLScfSrv-fbkMg7AaZerT0ssXAbLJ20LD2h-XZQXBFAXbyUkWmw/viewform?c=0&w=1">
-						<button class="button button-calm"> Bug Report </button>
-					</a>
-				</div>
-			</div>
+			<!-- Resourses Main Page -->
+			<div ng-if="!data.configuring" class="res-index-page">
 
+				<div class="res-sect">
+					<div class="head">
+						<div class="resTitle">SETTINGS</div>
+						<div class="resDesc">Adjust wave settings for the active user's profile.</div>
+					</div>
+					<div class="body">
+						<div class="btn" ng-click="configureLPC()">
+							Adjust LPC Filter Order
+						</div>
+					</div>
+				</div>
+
+				<div class="res-sect">
+					<div class="head">
+						<div class="resTitle">{{resPageData.downloads.title}}</div>
+						<div class="resDesc">{{resPageData.downloads.description}}</div>
+					</div>
+					<div class="body">
+						<a ng-repeat="item in resPageData.downloads.items"
+								href="{{item.url}}"
+								class="btn" >
+							{{item.title}}
+						</a>
+					</div>
+				</div>
+
+				<div class="res-sect">
+					<div class="head">
+						<div class="resTitle">{{resPageData.links.title}}</div>
+						<div class="resDesc">{{resPageData.links.description}}</div>
+					</div>
+					<div class="body">
+						<a href="https://www.youtube.com/watch?v=kGFdED4HDcw" class="btn">
+							staRt Demo Video
+						</a>
+						<a href="https://wp.nyu.edu/byunlab/projects/start/participate/" class="btn">
+							Become a Pilot Tester
+						</a>
+					</div>
+				</div>
+			</div> <!-- end res-index-page -->
+
+
+			<!-- Adjust Filter Order Page -->
 			<div class="text-and-lpc__text resources" ng-if="data.configuring">
 				<p>
 					Use the slider to manually adjust the LPC filter order. <strong>In general, the filter order should be between 35 and 45.</strong>
