Updates styles for Resources Index Pg -- WIP: Code clean-up needed.

--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -15,16 +15,19 @@
 			</div>
 
 			<div class="version-display">
-				<p><span class="res-important">staRt app version {{data.version}}</span>
+				<p> <span class="res-important">staRt app version {{data.version}}</span>
 					<br/>
-					{{data.platform}}
+					platform: {{data.platform}}
 				</p>
 			</div>
+
 		</div> <!-- end _bg-container -->
 
 
 		<!-- ===================================== -->
 		<!-- page content goes here -->
+
+
 		<div class="resources-layout_content-container">
 
 			<!-- Resourses Main Page -->
