See #236. Seems to fix the coin row issue.

--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -29,7 +29,7 @@
         slider="true"
         rate="isPracticing"
         reset="true"
-        sand="false"
+        sand="true"
         tutorial="false"
         type="type"
         wave-hidden="forceWaveHidden || isFeedbacking"
