See #268 -- During a session, should be impossible to change the number of trials from 100

--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -121,7 +121,15 @@
 				<div class="quest-config-row word-quest-trial-goal">
 					<h2>Select Session Trial Goal</h2>
 					<p>{{data.count}} Trials</p>
-					<input type="range" min="15" max="100" step="5" ng-model="data.count" ng-change="updateCount()" />
+          <input
+            type="range"
+            min="15"
+            max="100"
+            step="5"
+            ng-disabled="data.trialCountSelectorDisabled"
+            ng-model="data.count"
+            ng-change="updateCount()"
+          />
 				</div>
 
 				<div class="quest-config-row word-quest-wave-visible">
