This updates the fix to #236 to be mergable with master. This is the fix where the wave was blocking coins 8-10 from view.

--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -19,19 +19,35 @@
     </div>
   </div>
 
-  <lpc-directive beachpost="true" transparent="true" probe="probe" slider="true" rate="isPracticing" reset="true" sand="true"
-    tutorial="false" type="type" wave-hidden="forceWaveHidden || isFeedbacking" hide-btn="true"></lpc-directive>
+   <div class="quest-lpcDir-layout">
+     <div class="waveBox-layout">
+       <lpc-directive
+         beachpost="true"
+         transparent="true"
+         probe="probe"
+         slider="true"
+         rate="isPracticing"
+         reset="true"
+         sand="true"
+         tutorial="false"
+         type="type"
+         wave-hidden="forceWaveHidden || isFeedbacking" hide-btn="true">
+       </lpc-directive>
+     </div>
+   </div> <!-- end quest-lpcDir-layout -->
 
-  <div class="coinBox-layout" style="width: {{sandholes.length * 41}}px;">
-    <div class="sand_coins">
-      <div ng-repeat="stack_coins in block_coins track by $index" class="coin_stack">
-        <img ng-repeat="stack_coin in stack_coins track by $index" src="img/stackCoins/stackCoin-{{stack_coin}}.png"
-          class="coin" style="bottom: {{$index * 6}}px" />
-      </div>
-    </div>
-    <div class="sand_holes">
-      <img ng-repeat="i in sandholes track by $index" src="img/stackCoins/sandHole.png" />
-    </div>
-  </div>
+   <div class="coin-row-layout ">
+     <div class="coinBox-layout" style="width: {{sandholes.length * 41}}px;">
+       <div class="sand_coins">
+         <div ng-repeat="stack_coins in block_coins track by $index" class="coin_stack">
+           <img ng-repeat="stack_coin in stack_coins track by $index" src="img/stackCoins/stackCoin-{{stack_coin}}.png"
+             class="coin" style="bottom: {{$index * 6}}px" />
+         </div>
+       </div>
+       <div class="sand_holes">
+         <img ng-repeat="i in sandholes track by $index" src="img/stackCoins/sandHole.png" />
+       </div>
+     </div>
+   </div>
 
 </div> <!-- end words-contentBox-->
