--- a/staRt/www/states/root/tutorial/partialTemplates/noWave.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/noWave.html
@@ -4,13 +4,15 @@
 
 	<div class="tutPg-header" ng-if="currStep.header.txt">
 	 	<span ng-bind-html="currStep.header.txt"></span>
-	</div> 
-	
+	</div>
+
 	<div class="tutNoWave-content">
-		
+
 		<div class="noWaveBox">
 
-			<div class="noWaveRow" ng-if="currStep.LRow1.items" ng-repeat="item in currStep.LRow1.items">
+			<div class="noWaveRow"
+				ng-if="currStep.LRow1.items"
+				ng-repeat="item in currStep.LRow1.items">
 				<span ng-bind-html="item">{{item}}</span>
 			</div>
 
@@ -23,17 +25,14 @@
 				</button>
 			</div>
 		</div> <!-- end noWaveBox -->
-		
-		<img 
-			ng-src="{{currStep.pic.img}}" 
-			class="charImg" 
-			style="height:{{currStep.pic.h}}; 
-				width:{{currStep.pic.w}}; 
-				top:{{currStep.pic.top}}; 
+
+		<img
+			ng-src="{{currStep.pic.img}}"
+			class="charImg"
+			style="height:{{currStep.pic.h}};
+				width:{{currStep.pic.w}};
+				top:{{currStep.pic.top}};
 				left:{{currStep.pic.left}};">
 		</div>
 	</div> <!-- end tutNoWave-content -->
 </div> <!-- end .pageView -->
-
-
-
